# RPA

./: .gitignore  CMakeLists.txt  Makefile  partitions.csv  readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/button/: ButtonSignal.cpp  ButtonSignal.h
main/config/: Config.cpp  Config.h
main/hc/: .gitignore  Define.h  ErrorCode.h  Makefile  Makefile.android  ban tin mqttV2.md  config.json  main.cpp  message.txt  readme.txt  wps
main/hc/button/: ButtonSignal.cpp  ButtonSignal.h
main/hc/config/: Config.cpp  Config.h
main/hc/device/: Device.cpp  Device.h
main/hc/device/ble/: BleDefine.h  DeviceBle.cpp  DeviceBle.h
main/hc/gateway/: ActionCallback.cpp  ActionCallback.h  CloudProtocol.cpp  CloudProtocol.h  Gateway.cpp  Gateway.h  GatewayUdpMessage.cpp  LocalProtocol.cpp  LocalProtocol.h  Udp.cpp  Udp.h
main/hc/json/: json.h  jsoncpp.cpp
main/hc/log/: Log.cpp  Log.h
main/hc/mqtt/: Mqtt.cpp  Mqtt.h
main/hc/object/: Object.cpp  Object.h
main/hc/product/: Product.cpp  Product.h
main/hc/protocol/ble/: BleOpCode.h  BleProtocol.cpp  BleProtocol.h
main/hc/protocol/i2c/: RelayI2C.c  i2c_master.c  i2c_master.h
main/hc/protocol/qr/: QrProtocol.cpp  QrProtocol.h
main/hc/uart/: Uart.cpp  Uart.h
main/hc/util/: AES.cpp  AES.h  Base64.h  Util.cpp  Util.h
main/hc/wifi/: Wifi.cpp  Wifi.h
main/led/: Led.cpp  Led.h
main/log/: Log.h
main/mqtt/: Mqtt.cpp  Mqtt.h  MqttBroker.cpp  MqttBroker.h  mongoose.c  mongoose.h
main/sntp/: Sntp.cpp  Sntp.h  sntp.c
main/uart/: Uart.cpp  Uart.h
main/wifi/: Wifi.cpp  Wifi.h
(+4 files in other folders)
